lexer_parser/src/test/exempleFile/miniJaja/success/methInteger.mjj
/****************************************/
/* Programme MiniJaja			*/
/* Validation du type int */
/****************************************/
/* Test de la methode de type int
*/

class methInteger{ 

    int test(){
        return 5;
    };
    main {
 
    }
}