lexer_parser/src/test/exempleFile/miniJaja/fail/methTypeDouble.mjj
/****************************************/
/* Programme MiniJaja			*/
/* Validation d'un mauvais type */
/****************************************/
/* Test d'un mauvais type --> doit echouer
*/

class methTypeDouble{ 

    double essai(){
        return 5;
    };
    
    main {
        
    }
}
